syntax = "proto3";

message ServerInfo
{
	string name = 1;
}